upgrade of dependencies, make javassist work with java 17