@@ -1,15 +1,15 @@
 plugins {
 	id("java-library")
-	id "com.github.ben-manes.versions" version "0.39.0"
+	id "com.github.ben-manes.versions" version "0.42.0"
 }
 project.ext {
-	VERSION_JAVACC = '7.0.11'
+	VERSION_JAVACC = '7.0.12'
 	DEP_SERVLET_API = 'javax.servlet:javax.servlet-api:4.0.1'
-	DEP_JANINO = 'org.codehaus.janino:janino:3.1.7'
-	DEP_JAVASSIST = 'org.javassist:javassist:3.28.0-GA'
+	DEP_JANINO = 'org.codehaus.janino:janino:3.1.8'
+	DEP_JAVASSIST = 'org.javassist:javassist:3.29.2-GA'
 	DEP_JAVACC = "net.java.dev.javacc:javacc:${VERSION_JAVACC}"
 
-	DEP_GROOVY = 'org.codehaus.groovy:groovy:3.0.10'
+	DEP_GROOVY = 'org.codehaus.groovy:groovy:3.0.13'
 	DEP_LOMBOK_VERSION = '1.18.24'
 	DEP_SPOCK_BOM = 'org.spockframework:spock-bom:2.0-groovy-3.0'
 	DEP_SPOCK_CORE = 'org.spockframework:spock-core'
@@ -26,14 +26,14 @@ allprojects {
 	}
 
 	dependencies {
-		implementation 'org.slf4j:slf4j-api:1.7.32'
-		implementation 'org.slf4j:slf4j-simple:1.7.32'
-		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-		testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
-		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-		testImplementation 'org.assertj:assertj-core:3.22.0'
-		testImplementation "org.mockito:mockito-core:4.5.1"
-		testImplementation "org.mockito:mockito-junit-jupiter:4.3.1"
+		implementation 'org.slf4j:slf4j-api:2.0.3'
+		implementation 'org.slf4j:slf4j-simple:2.0.3'
+		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+		testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
+		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+		testImplementation 'org.assertj:assertj-core:3.23.1'
+		testImplementation "org.mockito:mockito-core:4.8.0"
+		testImplementation "org.mockito:mockito-junit-jupiter:4.8.0"
 	}
 
 	java {
@@ -69,3 +69,40 @@ allprojects {
 }
 version = '1.0'
 
+// apply common test configuration
+/*
+gradle.taskGraph.whenReady({ graph ->
+	tasks.withType(Test).each { test ->
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+			test.configure {
+				jvmArgs += [
+						"-XX:+AllowRedefinitionToAddDeleteMethods",
+						"--add-opens=java.base/java.lang=ALL-UNNAMED",
+						"--add-opens=java.base/java.io=ALL-UNNAMED",
+						]
+			}
+		}
+	}
+})
+*/
+
+/*
+ext {
+	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+		defaultJvmArgs +=[
+				"--add-opens=java.base/java.io=ALL-UNNAMED",
+				"--add-opens=java.base/java.lang=ALL-UNNAMED",
+				"--add-opens=java.base/java.nio=ALL-UNNAMED",
+				"--add-opens=java.base/java.nio.file=ALL-UNNAMED",
+				"--add-opens=java.base/java.util=ALL-UNNAMED",
+				"--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+				"--add-opens=java.base/java.util.regex=ALL-UNNAMED",
+				"--add-opens=java.base/java.util.stream=ALL-UNNAMED",
+				"--add-opens=java.base/java.text=ALL-UNNAMED",
+				"--add-opens=java.base/java.time=ALL-UNNAMED",
+				"--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+				]
+	}
+
+}
+*/
